--- a/LaTeX/TeleCom/TI0119/main.tex
+++ b/LaTeX/TeleCom/TI0119/main.tex
@@ -3,8 +3,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
 \usepackage{amsmath,amsfonts,amssymb,enumerate,MnSymbol}
-\usepackage{indentfirst,siunitx}
+\usepackage{subfig}
 \usepackage{pst-sigsys,pst-all,graphicx}
+%\usepackage{indentfirst,siunitx,multicol}
 %\usepackage[dvips]{graphicx}
 %\usepackage{booktabs,pstricks-add,pst-coil,siunitx,multirow,steinmetz}
 %\usepackage[usenames,dvipsnames,svgnames,table,x11names]{xcolor}
@@ -54,7 +55,7 @@
          \vspace*{1.0cm}
 %         %%{\large{\bfseries Introdução à Instrumentação e aos Princípios Básicos da Eletricidade}}
           %%{\large{\bfseries Ondas planas em meios com e sem perdas}}
-         {\large{\bfseries 1a. Lista de Exercícios}}
+         {\large{\bfseries TC - Convolução Circular}}
      \end{center}
 % %
  \vspace*{12.0cm}
@@ -74,16 +75,16 @@
 % \addcontentsline{toc}{section}{Conclusão}
 % \tableofcontents
 % \listoftables
-\include{lista1/report}
+\include{tc1/report}
 }
 %
-\bibliographystyle{ieeetr}
-\bibliography{refpld}
-\addcontentsline{toc}{section}{Referências Bibliográficas}
+%\bibliographystyle{ieeetr}
+%\bibliography{refpld}
+%\addcontentsline{toc}{section}{Referências Bibliográficas}
 %
 \end{document}
 
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: t
-%%% End:
+%%% End: 
