adicionadas os gráficos de x[n] e h[n]

--- a/LaTeX/TeleCom/TI0119/main.tex
+++ b/LaTeX/TeleCom/TI0119/main.tex
@@ -3,10 +3,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
 \usepackage{amsmath,amsfonts,amssymb,enumerate,MnSymbol}
-\usepackage{subfig}
-\usepackage{pst-sigsys,pst-all,graphicx}
+\usepackage{subfigure}
+\usepackage{pst-sigsys,pst-all}
+\usepackage[dvips]{graphicx}
 %\usepackage{indentfirst,siunitx,multicol}
-%\usepackage[dvips]{graphicx}
 %\usepackage{booktabs,pstricks-add,pst-coil,siunitx,multirow,steinmetz}
 %\usepackage[usenames,dvipsnames,svgnames,table,x11names]{xcolor}
 %\usepackage[brazil]{varioref}
