melhoria na exibição dos gráficos dos sinais discretos

--- a/LaTeX/TeleCom/TI0119/main.tex
+++ b/LaTeX/TeleCom/TI0119/main.tex
@@ -3,9 +3,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazil]{babel}
 \usepackage{amsmath,amsfonts,amssymb,enumerate,MnSymbol}
-\usepackage{subfigure}
 \usepackage{pst-sigsys,pst-all}
 \usepackage[dvips]{graphicx}
+\usepackage{float,caption,subcaption}
 %\usepackage{indentfirst,siunitx,multicol}
 %\usepackage{booktabs,pstricks-add,pst-coil,siunitx,multirow,steinmetz}
 %\usepackage[usenames,dvipsnames,svgnames,table,x11names]{xcolor}
