--- a/LaTeX/TeleCom/TI0119/tc1/report.tex
+++ b/LaTeX/TeleCom/TI0119/tc1/report.tex
@@ -7,52 +7,37 @@ A definição matemática de convolução vem da análise funcional, sendo este 
 
 No estudo de sistemas lineares e invariantes no tempo a convolução descreve a saída de um dado sistema sendo a sinal de entrada convolvido com a resposta ao impulso do sistema. Seja um sistema causal com sua resposta ao impulso dada por $h[n] = 2\delta[n] + \delta[n-1]$ e entrada $x[n] = 3\delta[n] + 4\delta[n-1] + 5\delta[n-2]$
 
-\begin{center}
-  \begin{pspicture}(0,0)(3,5)
-    \psaxes{-}(0,0)(3,0)
-    \psline[linewidth=1pt,showpoints=true](0,0)(0,3) % x[n]
-    \psline[linewidth=1pt,showpoints=true](1,0)(1,4) % x[n-1]
-    \psline[linewidth=1pt,showpoints=true](2,0)(2,5) % x[n-2]
-  \end{pspicture}
-  \qquad
-  \begin{pspicture}(0,0)(3,5)
-    \psaxes{-}(0,0)(3,0)
-    \psline[linewidth=1pt,showpoints=true](0,0)(0,3) % x[n]
-    \psline[linewidth=1pt,showpoints=true](1,0)(1,4) % x[n-1]
-    \psline[linewidth=1pt,showpoints=true](2,0)(2,5) % x[n-2]
-  \end{pspicture}
-\end{center}
-% \begin{center}
-%   \begin{pspicture}(-2.6,-2.7)(2.6,2.2)
-%     \rput(0,2.2){Unit Circle (radius 1)}
-%     \psaxes[labels=none]{<->}(0,0)(-2,-2)(2,2)
-%     \pscircle(0,0){1}
-%     \psline{->}(0,0)(-1.2,1.6)
-%     \psarc{->}(0,0){.5}{0}{126.8698976}
-%     \rput(.5,.5){$\theta$}
-%     \pscircle[fillstyle=solid,fillcolor=black](-.6,.8){.05}
-%     \rput[Bl](-2.6,.8){$(\cos\theta,\sin\theta)$}
-%     \rput(0,-2.5){$x^2+y^2=1$}
-%   \end{pspicture} %No carriage return so these pspictures
-%   % are on the same lines
-%   \qquad\qquad %qquad is a horizontal length. quad is shorter.
-%   % There are also \ (\ and a space) and \,
-%   % and a small ``negative space'' \!
-%   \begin{pspicture}(-2.6,-2.7)(2.6,2.2)
-%     \psaxes[labels=none]{<->}(0,0)(-2,-2)(2,2)
-%     \pscircle[linewidth=.5pt](0,0){1}
-%     \psline{->}(0,0)(-1.2,1.6)
-%     \psarc{->}(0,0){1}{0}{126.8698976}
-%     \rput(1.2,-.2){$r$}
-%     \rput(1.8,1){$\begin{array}{l}s=r\,\theta\\ \theta=s/r\end{array}$}
-%     \rput(0,2.2){General Circle (radius $r$)}
-%     \pscircle[fillstyle=solid,fillcolor=black](-.6,.8){.05}
-%     % Alternatively: \pscircle*(-.6,.6){.05}
-%     \rput(-2.1,.8){$(r\cos\theta,r\sin\theta)$}
-%     \rput(0,-2.5){$x^2+y^2=r^2$}
-%     \rput(0,-3){$\theta$ in radians}
-%   \end{pspicture}
-% \end{center}
+\begin{figure*}[hb]
+  \centering
+  \begin{subfigure}[h]{0.3\textwidth}
+    \begin{center}
+      \begin{pspicture}(0,0)(3,5.75)
+        \psaxes{-}(0,0)(3,0)
+        \psline[linewidth=1pt,showpoints=true](0,0)(0,3) % x[n]
+        \psline[linewidth=1pt,showpoints=true](1,0)(1,4) % x[n-1]
+        \psline[linewidth=1pt,showpoints=true](2,0)(2,5) % x[n-2]
+        \rput(0,3.5){3} % weight of x[n]
+        \rput(1,4.5){4} % weight of x[n-1]
+        \rput(2,5.5){5} % weight of x[n-2]
+      \end{pspicture}
+    \end{center}
+    \caption{x[n]}
+  \end{subfigure}
+  %
+  \begin{subfigure}[h]{0.3\textwidth}
+    \begin{center}
+      \begin{pspicture}(0,0)(3,5.75)
+        \psaxes{-}(0,0)(3,0)
+        \psline[linewidth=1pt,showpoints=true](0,0)(0,2) % h[n]
+        \psline[linewidth=1pt,showpoints=true](1,0)(1,1) % h[n-1]
+        \rput(0,2.5){2} % weight of h[n]
+        \rput(1,1.5){1} % weight of h[n-1]
+      \end{pspicture}
+    \end{center}
+    \caption{h[n]}
+  \end{subfigure}
+  \caption{Sinais de entrada x[n] e resposta ao impulso do sistema h[n]}
+\end{figure*}
 
 %%% Local Variables:
 %%% mode: latex
