--- a/LaTeX/TeleCom/TI0119/main.tex
+++ b/LaTeX/TeleCom/TI0119/main.tex
@@ -54,7 +54,7 @@
          \vspace*{1.0cm}
 %         %%{\large{\bfseries Introdução à Instrumentação e aos Princípios Básicos da Eletricidade}}
           %%{\large{\bfseries Ondas planas em meios com e sem perdas}}
-         {\large{\bfseries 1a. Lista de Exercícios}}
+         {\large{\bfseries 2a. Lista de Exercícios}}
      \end{center}
 % %
  \vspace*{12.0cm}
@@ -74,7 +74,8 @@
 % \addcontentsline{toc}{section}{Conclusão}
 % \tableofcontents
 % \listoftables
-\include{lista1/report}
+% \include{lista1/report}
+\include{lista2/report}
 }
 %
 \bibliographystyle{ieeetr}
