--- a/LaTeX/TeleCom/TI0119/main.tex
+++ b/LaTeX/TeleCom/TI0119/main.tex
@@ -53,13 +53,10 @@
          \vspace*{1.0cm}
          {\Large{\bfseries Disciplina:TH$0119$ -- PDS}}\\
          \vspace*{1.0cm}
-%         %%{\large{\bfseries Introdução à Instrumentação e aos Princípios Básicos da Eletricidade}}
-          %%{\large{\bfseries Ondas planas em meios com e sem perdas}}
-<<<<<<< HEAD
-         {\large{\bfseries 2a. Lista de Exercícios}}
-=======
+         %%{\large{\bfseries Introdução à Instrumentação e aos Princípios Básicos da Eletricidade}}
+         %%{\large{\bfseries Ondas planas em meios com e sem perdas}}
+         %%{\large{\bfseries 2a. Lista de Exercícios}}
          {\large{\bfseries TC - Convolução Circular}}
->>>>>>> 5961b38f55ae8b9c7785c30e4a57928189a5e71a
      \end{center}
 % %
  \vspace*{12.0cm}
@@ -79,12 +76,9 @@
 % \addcontentsline{toc}{section}{Conclusão}
 % \tableofcontents
 % \listoftables
-<<<<<<< HEAD
 % \include{lista1/report}
-\include{lista2/report}
-=======
+%\include{lista2/report}
 \include{tc1/report}
->>>>>>> 5961b38f55ae8b9c7785c30e4a57928189a5e71a
 }
 %
 %\bibliographystyle{ieeetr}
