1a.Questão Polarização Concluída

--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}[1.]
-\item Os campos elétricos de duas ondas eletromagnéticas de polarização linear, propagando em unísono através do espaço livre são dados por $E_{1} = e^{-\jmath \pi (z - 0,25)} \hat{a_{x}} [V/m]$ e $E_{2} = ae^{-\jmath \pi (z - 0,25b)} \hat{a_{y}} [V/m]$ com z em metros e onde a e b são constantes. Determine para a onda eletromagnética resultante: o campo magnético instantâneo, a polarização da onda, o vetor de Poynting instantâneo e médio.  
+\item Os campos elétricos de duas ondas eletromagnéticas de polarização linear, propagando em unísono através do espaço livre são dados por $E_{1} = e^{-\jmath \pi (z - 0,25)} \hat{a_{x}} [\si{\volt/\meter}]$ e $E_{2} = ae^{-\jmath \pi (z - 0,25b)} \hat{a_{y}} [\si{\volt/\meter}]$ com z em metros e onde a e b são constantes. Determine para a onda eletromagnética resultante: o campo magnético instantâneo, a polarização da onda, o vetor de Poynting instantâneo e médio.  
   
 
     Dados: $a = 3$, $b = 1$
@@ -7,7 +7,7 @@
 
     Resposta:
 
-    Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a_{x}} + E_{0}y \hat{a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a_{x}} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a_{y}} [V/m]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a_{x}} + A e^{\jmath \phi} \hat{a_{y}})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$
+    Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a_{x}} + E_{0}y \hat{ a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a_{x}} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a_{y}} [V/m]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a_{x}} + A e^{\jmath \theta} \hat{a_{y}})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$ $=$ $\dfrac{3 e^{-\jmath (z - 0,25)\pi}}{e^{-\jmath (z - 0,25) \pi}} = 3$, com $\theta = \phi_{y} - \phi{x}  = 0$ e $k_{z} = \pi$, logo $\vec{E} = (\hat{a_{x}} + 3 \hat{a_{y}})e^{-\jmath \pi z}$. A polarização da onda é linear, uma reta que passa pela origem e faz um ângulo $tg^{-1}(3) \approx 71.56\si{\degree}$ com o eixo horizontal.
 
 \end{enumerate}
 
