--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -7,8 +7,11 @@
 
     Resposta:
 
-    Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a_{x}} + E_{0}y \hat{ a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a_{x}} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a_{y}} [V/m]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a_{x}} + A e^{\jmath \theta} \hat{a_{y}})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$ $=$ $\dfrac{3 e^{-\jmath (z - 0,25)\pi}}{e^{-\jmath (z - 0,25) \pi}} = 3$, com $\theta = \phi_{y} - \phi{x}  = 0$ e $k_{z} = \pi$, logo $\vec{E} = (\hat{a_{x}} + 3 \hat{a_{y}})e^{-\jmath \pi z}$. A polarização da onda é linear, uma reta que passa pela origem e faz um ângulo $tg^{-1}(3) \approx 71.56\si{\degree}$ com o eixo horizontal.
+    O campo magnético é determinado por $\vec{k} \times \vec{E} = \omega \mu_{0} \vec{H}$ $\Rightarrow$ $k\hat{a_{z}} \times (\hat{a_{x}} + 3\hat{a_{y}})e^{-\jmath (z - 0,25)\pi}$ $=$ $\dfrac{k \mu_{0}}{\sqrt{\epsilon_{0}\mu_{0}}} \vec{H}$ $\Rightarrow$ $\left[ (\hat{a_{z}} \times \hat{a_{x}}) + 3(\hat{a_{z}} \times \hat{a_{y}}) \right]e^{-\jmath (z - 0,25)\pi}$ $=$ $\sqrt{\dfrac{\mu_{0}}{\epsilon_{0}}} \vec{H}$ $\Rightarrow$ $\vec{H}$ $=$ $\sqrt{\dfrac{\epsilon_{0}}{\mu_{0}}}e^{-\jmath (z - 0,25)\pi}\left(-3\hat{a_{x}} + \hat{a_{y}}\right)$. Como $\sqrt{\dfrac{\epsilon_{0}}{\mu_{0}}}$ $=$ $\dfrac{1}{120\pi}$, temos $\vec{H}$ $=$ $\dfrac{1}{40\pi}\left(-\hat{a_{x}} + \dfrac{1}{3}\hat{a_{y}}\right)e^{-\jmath (z - 0,25)\pi} [\si{\ampere/\meter}]$. Com $k_{z} = \pi [\si{\radian/\meter}]$, temos $\omega = 3\pi \times 10^{8} [\si{\radian/\second}]$, assim $\vec{H}$ $=$ $\dfrac{1}{40\pi}\left(-\hat{a_{x}} + \dfrac{1}{3}\hat{a_{y}}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\ampere/\meter}]$
 
+    Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a_{x}} + E_{0}y \hat{ a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a_{x}} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a_{y}} [\si{\volt/\meter}]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a_{x}} + A e^{\jmath \theta} \hat{a_{y}})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$ $=$ $\dfrac{3 e^{-\jmath (z - 0,25)\pi}}{e^{-\jmath (z - 0,25) \pi}} = 3$, com $\theta = \phi_{y} - \phi{x}  = 0$ e $k_{z} = \pi$, logo $\vec{E} = (\hat{a_{x}} + 3 \hat{a_{y}})e^{-\jmath \pi z}$. A polarização da onda é linear, uma reta que passa pela origem e faz um ângulo $tg^{-1}(3) \approx 71.56\si{\degree}$ com o eixo horizontal.
+
+    O vetor de Poynting instantâneo é dado por $\vec{P}(\vec{r},t)$ $=$ $\vec{E}(\vec{r},t) \times \vec{H}(\vec{r},t)$. No problema temos $\vec{E}(\vec{r},t)$ $=$ $\left(\hat{a_{x}} + 3\hat{a_{y}}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\volt/\meter}]$ e $\vec{H}(\vec{r},t)$ $=$ $\left(-\hat{a_{x}} + \dfrac{1}{3}\hat{a_{y}}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\ampere/\meter}]$
 \end{enumerate}
 
 
