AP1 Guia de Onda. Todas as questões estão digitadas

--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -1,13 +1,45 @@
 \begin{enumerate}[1.]
+
 \item Os campos elétricos de duas ondas eletromagnéticas de polarização linear, propagando em unísono através do espaço livre são dados por $E_{1} = e^{-\jmath \pi (z - 0,25)} \hat{a}_{x} [\si{\volt/\meter}]$ e $E_{2} = ae^{-\jmath \pi (z - 0,25b)} \hat{a}_{y} [\si{\volt/\meter}]$ com z em metros e onde a e b são constantes. Determine para a onda eletromagnética resultante: o campo magnético instantâneo, a polarização da onda, o vetor de Poynting instantâneo e médio.  
-  
 
-    Dados: $a = 3$, $b = 1$
+\item Uma onda eletromagnética plana uniforme harmônica no tempo na frequência \emph{f} propaga na direção $z > 0$ através de um tecido biológico de parâmetros desconhecidos. O campo magnético da onda tem somente a componente $x$ e sua intensidade \emph{rms} na origem do sistema de coordenadas é $H_{0}$ $=$ $25$\si{\milli}[\si{\ampere/\meter}]. A amplitude da onda é reduzida em $3,25$ \si{\decibel} para cada centímetro percorrido, e o coeficiente de fase da onda chega a $\beta$ $=$ $260$[\si{\radian/\meter}]. Determinar a permissividade e a condutividade do tecido.
 
+\item Uma onda eletromagnética plana uniforme harmônica de frequência \emph{f} e intensidade de campo elétrico $E_{i} = 1$\si{\volt/\meter} propaga no ar e incide normalmente na superfície planar de um grande bloco de concreto com parâmetros elétricos $\epsilon_{r} = 6$, $\mu_{r} = 1$ e $\sigma_{r} = 2,5 \times 10^{-3}$. Determinar:
 
-    Resposta:
+\begin{enumerate}[a.]
+{\setlength\itemindent{25pt} \item A classificação do bloco de concreto}
+{\setlength\itemindent{25pt} \item A taxa de onda estacionária no ar}
+{\setlength\itemindent{25pt} \item O vetor de Poynting médio no tempo no concreto}
+{\setlength\itemindent{25pt} \item As percentagens da potência incidente média no tempo que são refletidas a partir da interface e transmitidas no bloco de concreto}
+\end{enumerate}
+
+\item Uma onda eletromagnética plana na frequência \emph{f} incide normalmente em um sistema de $3$ meios caracterizados por $\epsilon^{1}_{r}$,  $\epsilon^{2}_{r}$ e $\epsilon^{3}_{r}$, figura $2.40$ da apostila. Projete a camada central (meio $2$) com a menor espessura, para que não haja reflexão de onda incidente de volta ao meio $1$. Gere o gráfico da potência refletida no meio $1$ para a frequência $0,5$ \emph{f} a $1,5$ \emph{f}. Mostre no gráfico a faixa em que a potência refletida é metade da incidente, isto é, a faixa de queda de $3$ \si{\decibel} (caso não encontre aumete a faixa de frequência).
+
+\item Uma onda plana na frequência \emph{f} propaga no ar e incide num ângulo de $\theta_{i}$ sobre o mar ($\epsilon = 80 \epsilon_{0}$, $\sigma = 3$[\si{\siemens/\meter}]), calcular:
+
+\begin{enumerate}[a.]
+{\setlength\itemindent{25pt} \item As amplitudes das ondas refletidas e transmitidas ($E_{r}$, $H_{r}$, $E_{t}$, $H_{t}$) considerando que $E_{i} = 500$\si{\micro}[\si{\volt/\meter}] e sua polarização é paralela}
+{\setlength\itemindent{25pt} \item O ângulo de transmissão}
+\end{enumerate}
+
+\item Uma onda plana na frequência \emph{f} propaga no ar e incide sobre o poliestireno ($\epsilon = 2\epsilon_{0}$) segundo um ângulo de incidência $\theta_{i}$. A onda incidente possui um campo elétrico com $E_{i} = 100$\si{\micro}[\si{\volt/\meter}] e polarizado perpendicularmente, calcular:
+
+\begin{enumerate}[a.]
+{\setlength\itemindent{25pt} \item O ângulo de transmissão}
+{\setlength\itemindent{25pt} \item As ondas refletidas e transmitidas ($E_{r}$, $H_{r}$, $E_{t}$, $H_{t}$)}
+{\setlength\itemindent{25pt} \item O coeficiente de transmissão de energia, isto é, a razão $\dfrac{P^{t}_{m}}{P^{i}_{m}}$}
+\end{enumerate}
+
+\end{enumerate}
+    
+
+\begin{center}\fbox{\Large RESPOSTAS}\end{center}
 
 \vspace*{0.5cm}
+
+\begin{enumerate}[1.]
+
+\item Dados: $a = 3$, $b = 1$
 
 O campo magnético é determinado por:
 
@@ -41,7 +73,6 @@ Para o cálculo da potência média fazemos uso da notação fasorial, tal que $
 \end{eqnarray*}
 
 \end{enumerate}
-
 
 %%% Local Variables: 
 %%% mode: latex
