3a. Questão finalizado os ítens a,b e c

--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -31,7 +31,8 @@
 \end{enumerate}
 
 \end{enumerate}
-    
+
+\newpage    
 
 \begin{center}\fbox{\Large RESPOSTAS}\end{center}
 
@@ -52,7 +53,7 @@ O campo magnético é determinado por:
 
 Como $\sqrt{\dfrac{\epsilon_{0}}{\mu_{0}}}$ $=$ $\dfrac{1}{120\pi}$, temos $\vec{H}$ $=$ $\dfrac{1}{40\pi}\left(-\hat{a}_{x} + \dfrac{1}{3}\hat{a}_{y}\right)e^{-\jmath (z - 0,25)\pi} [\si{\ampere/\meter}]$. Com $k_{z} = \pi [\si{\radian/\meter}]$, temos $\omega = 3\pi \times 10^{8} [\si{\radian/\second}]$, assim $\vec{H}$ $=$ $\dfrac{1}{40\pi}\left(-\hat{a}_{x} + \dfrac{1}{3}\hat{a}_{y}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\ampere/\meter}]$
 
-Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a}_{x} + E_{0}y \hat{ a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a}_{x} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a}_{y} [\si{\volt/\meter}]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a}_{x} + A e^{\jmath \theta} \hat{a}_{y})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$ $=$ $\dfrac{3 e^{-\jmath (z - 0,25)\pi}}{e^{-\jmath (z - 0,25) \pi}} = 3$, e $\theta = \phi_{y} - \phi{x}  = 0$ e $k_{z} = \pi$, logo $\vec{E} = (\hat{a}_{x} + 3 \hat{a}_{y})e^{-\jmath \pi z}$. A polarização da onda é linear, uma reta que passa pela origem e faz um ângulo $tg^{-1}(3) \approx 71.56\si{\degree}$ com o eixo horizontal.
+Seja o campo elétrico $\vec{E}$ dado por $\vec{E} = E_{0}x \hat{a}_{x} + E_{0}y \hat{ a_{y}}$  $=$ $e^{-\jmath (z - 0,25) \pi} \hat{a}_{x} + 3 e^{-\jmath (z - 0,25)\pi} \hat{a}_{y} [\si{\volt/\meter}]$, reescrevendo o campo elétrico temos $\vec{E} = (\hat{a}_{x} + A e^{\jmath \theta} \hat{a}_{y})e^{-\jmath k_{z} z}$, com $A = \dfrac{E_{0}y}{E_{0}x}$ $=$ $\dfrac{3 e^{-\jmath (z - 0,25)\pi}}{e^{-\jmath (z - 0,25) \pi}} = 3$, e $\theta = \phi_{y} - \phi{x}  = 0$ e $k_{z} = \pi$, logo $\vec{E} = (\hat{a}_{x} + 3 \hat{a}_{y})e^{-\jmath \pi z}$. A polarização da onda é linear, uma reta que passa pela origem e faz um ângulo $\tan^{-1}(3) \approx 71.56\si{\degree}$ com o eixo horizontal.
 
 O vetor de Poynting instantâneo é dado por $\vec{P}(\vec{r},t)$ $=$ $\vec{E}(\vec{r},t) \times \vec{H}(\vec{r},t)$. No problema temos $\vec{E}(\vec{r},t)$ $=$ $\left(\hat{a}_{x} + 3\hat{a}_{y}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\volt/\meter}]$ e $\vec{H}(\vec{r},t)$ $=$ $\dfrac{1}{40\pi}\left(-\hat{a}_{x} + \dfrac{1}{3}\hat{a}_{y}\right)\cos[3\pi \times 10^{8}t - (z - 0,25)\pi] [\si{\ampere/\meter}]$, logo:
 
@@ -92,9 +93,9 @@ para o bloco de concreto temos:
   \dfrac{\sigma}{\omega \epsilon} & \approx & 0,0015 \nonumber
 \end{eqnarray*}
 
-como $0.0015$ $<$ $0.01$, logo o bloco de concreto para as condições previamente dadas é um dielétrico.
+como $0.0015$ $<$ $0.01$, logo o bloco de concreto, para as condições previamente dadas, é um dielétrico.
 
-Para o cálculo da taxa de onda estacionária no ar seguimos a seguinte relação: TOE $=$ $\dfrac{|E|_{M}}{|E|_{m}}$ $=$$\dfrac{|E|^{+}_{0} + |E|^{-}_{0}}{|E|^{+}_{0} - |E|^{-}_{0}}$, com o coeficiente de reflexão definido como $|\Gamma|$ $=$ $\left|\dfrac{E^{-}_{0}}{E^{+}_{0}}\right|$, substituindo temos: TOE $=$ $\dfrac{1 + |\Gamma|}{1 - |\Gamma|}$. Em termos das impedâncias dos meios separados pela interface temos que o $\Gamma$ $=$ $\dfrac{Z_{2} - Z_{1}}{Z_{2} + Z_{1}}$, como $Z$ $=$ $\sqrt{\dfrac{\mu_{0}}{\epsilon_{0}}}$$\sqrt{\dfrac{\mu_{r}}{\epsilon_{r}}}$, assim $Z$ $=$ $120\pi \sqrt{\dfrac{\mu_{r}}{\epsilon_{r}}}$.  Como o meio 1 é o ar, logo $Z_{1}$ $=$ $120\pi$ [\si{\ohm}] e $Z_{2}$ $=$ $\dfrac{120\pi}{\sqrt{6}}$ [\si{\ohm}], assim:
+Para o cálculo da taxa de onda estacionária no ar seguimos a seguinte relação: TOE $=$ $\dfrac{|E|_{M}}{|E|_{m}}$ $=$$\dfrac{|E|^{+}_{0} + |E|^{-}_{0}}{|E|^{+}_{0} - |E|^{-}_{0}}$, com o coeficiente de reflexão definido como $|\Gamma|$ $=$ $\left|\dfrac{E^{-}_{0}}{E^{+}_{0}}\right|$, substituindo temos: TOE $=$ $\dfrac{1 + |\Gamma|}{1 - |\Gamma|}$. Em termos das impedâncias dos meios separados pela interface temos que o $\Gamma$ $=$ $\dfrac{Z_{2} - Z_{1}}{Z_{2} + Z_{1}}$, como $Z = \sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0} - \jmath \left(\frac{\sigma}{\omega}\right)}}$  para um meio não condutor $\left(\dfrac{\sigma}{\omega}\right) \rightarrow 0$, assim $Z = \sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0}}}$ $=$ $120\pi \sqrt{\dfrac{\mu_{r}}{\epsilon_{r}}}$.  Como o meio 1 é o ar, logo $Z_{1} = \sqrt{\dfrac{\mu_{0}}{\epsilon_{0}}} =120\pi$ [\si{\ohm}] e $Z_{2} = \dfrac{120\pi}{\sqrt{6}}$ [\si{\ohm}], assim:
 
 \begin{eqnarray*}
   \Gamma & = & \dfrac{\dfrac{120\pi}{\sqrt{6}} - 120\pi}{\dfrac{120\pi}{\sqrt{6}} + 120\pi} \nonumber \\
@@ -110,8 +111,9 @@ Substituindo, temos:
   TOE & \approx & 2,44
 \end{eqnarray*}
 
+Para o cálculo do vetor de \emph{Poynting} médio temporal, nos é necessário calcular os campos elétricos e magnéticos transmitdos ao bloco de concreto através da interface.  O campo elétrico incidende é dado, sem perda de generalidade, por $\vec{E}_{i}$ $=$ $\cos(\pi \times 10^{10} t - \dfrac{100}{3}\pi z)$ $\hat{a}_{x}$ [\si{\volt/\meter}], com $\omega$ $=$ $\pi \times 10^{10}$ [\si{\radian/\second}], $\lambda_{1} = \dfrac{\omega}{c} = \dfrac{\pi \times 10^{10}}{3 \times 10^{8}}$ $=$ $\dfrac{100}{3}\pi$ [\si{\radian/\meter}]. A seguir representamos o  campo elétrico, magnético e o vetor de \emph{Poynting} transmitido em função de $\vec{E}_{i}$ dado por: $$\vec{E}_{t}  =  T |E|_{i} e^{\gamma_{2} z} \hat{a}_{x}$$ $$\vec{H}_{t}  =  T \dfrac{|E|_{i}}{Z_{2}} e^{\gamma_{2} z} \hat{a}_{y}$$ $$\vec{P}_{m}^{t} = \dfrac{1}{2}\mathfrak{Re}(\vec{E}_{t} \times \vec{H}_{t}) \hat{a}_{z}$$ $$\vec{P}_{m}^{t} = \mathfrak{Re}\left[\dfrac{1}{Z_{2}}\right] \dfrac{|T E_{i}|^2}{2}e^{-2\alpha z} \hat{a}_{z}$$ com $T = \Gamma + 1$ e $\Gamma$ $=$ $-0,42$ logo $T = 0,58$, $\gamma = \alpha + \jmath \beta$  onde: $$\alpha = \omega \sqrt{\mu\epsilon \sec{\theta}} \sin{\dfrac{\theta}{2}}$$ $$\beta = \omega \sqrt{\mu\epsilon \sec{\theta}} \cos{\dfrac{\theta}{2}}$$ com $\theta = \tan^{-1}\left(\dfrac{\sigma}{\omega\epsilon}\right)$, como $\dfrac{\sigma}{\omega\epsilon} = \dfrac{25}{\pi \times 10^{14} \times \dfrac{6 \times 10^{-9}}{36\pi}}$ $=$ $0,0015$, logo $\theta \approx 0.085$\si{\degree}, assim $\alpha \approx 0.19$[\si{\neper/\meter}] e $\beta = \dfrac{100\sqrt{6}}{3}\pi$[\si{\radian/\meter}]. Substituindo os valores temos: $$\vec{P}_{m}^{t} \approx 0.0011 e^{-0.38 z} \hat{a}_{z} [\si{\watt/\meter^{2}}]$$
 \end{enumerate}
-
+ 
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "../main"
