Concluída a 3a.questão da AP1 de Guia de Onda

--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -10,7 +10,7 @@
 {\setlength\itemindent{25pt} \item A classificação do bloco de concreto}
 {\setlength\itemindent{25pt} \item A taxa de onda estacionária no ar}
 {\setlength\itemindent{25pt} \item O vetor de Poynting médio no tempo no concreto}
-{\setlength\itemindent{25pt} \item As percentagens da potência incidente média no tempo que são refletidas a partir da interface e transmitidas no bloco de concreto}
+{\setlength\itemindent{25pt} \item As porcentagens da potência incidente média no tempo que são refletidas a partir da interface e transmitidas no bloco de concreto}
 \end{enumerate}
 
 \item Uma onda eletromagnética plana na frequência \emph{f} incide normalmente em um sistema de $3$ meios caracterizados por $\epsilon^{1}_{r}$,  $\epsilon^{2}_{r}$ e $\epsilon^{3}_{r}$, figura $2.40$ da apostila. Projete a camada central (meio $2$) com a menor espessura, para que não haja reflexão de onda incidente de volta ao meio $1$. Gere o gráfico da potência refletida no meio $1$ para a frequência $0,5$ \emph{f} a $1,5$ \emph{f}. Mostre no gráfico a faixa em que a potência refletida é metade da incidente, isto é, a faixa de queda de $3$ \si{\decibel} (caso não encontre aumete a faixa de frequência).
@@ -111,7 +111,13 @@ Substituindo, temos:
   TOE & \approx & 2,44
 \end{eqnarray*}
 
-Para o cálculo do vetor de \emph{Poynting} médio temporal, nos é necessário calcular os campos elétricos e magnéticos transmitdos ao bloco de concreto através da interface.  O campo elétrico incidende é dado, sem perda de generalidade, por $\vec{E}_{i}$ $=$ $\cos(\pi \times 10^{10} t - \dfrac{100}{3}\pi z)$ $\hat{a}_{x}$ [\si{\volt/\meter}], com $\omega$ $=$ $\pi \times 10^{10}$ [\si{\radian/\second}], $\lambda_{1} = \dfrac{\omega}{c} = \dfrac{\pi \times 10^{10}}{3 \times 10^{8}}$ $=$ $\dfrac{100}{3}\pi$ [\si{\radian/\meter}]. A seguir representamos o  campo elétrico, magnético e o vetor de \emph{Poynting} transmitido em função de $\vec{E}_{i}$ dado por: $$\vec{E}_{t}  =  T |E|_{i} e^{\gamma_{2} z} \hat{a}_{x}$$ $$\vec{H}_{t}  =  T \dfrac{|E|_{i}}{Z_{2}} e^{\gamma_{2} z} \hat{a}_{y}$$ $$\vec{P}_{m}^{t} = \dfrac{1}{2}\mathfrak{Re}(\vec{E}_{t} \times \vec{H}_{t}) \hat{a}_{z}$$ $$\vec{P}_{m}^{t} = \mathfrak{Re}\left[\dfrac{1}{Z_{2}}\right] \dfrac{|T E_{i}|^2}{2}e^{-2\alpha z} \hat{a}_{z}$$ com $T = \Gamma + 1$ e $\Gamma$ $=$ $-0,42$ logo $T = 0,58$, $\gamma = \alpha + \jmath \beta$  onde: $$\alpha = \omega \sqrt{\mu\epsilon \sec{\theta}} \sin{\dfrac{\theta}{2}}$$ $$\beta = \omega \sqrt{\mu\epsilon \sec{\theta}} \cos{\dfrac{\theta}{2}}$$ com $\theta = \tan^{-1}\left(\dfrac{\sigma}{\omega\epsilon}\right)$, como $\dfrac{\sigma}{\omega\epsilon} = \dfrac{25}{\pi \times 10^{14} \times \dfrac{6 \times 10^{-9}}{36\pi}}$ $=$ $0,0015$, logo $\theta \approx 0.085$\si{\degree}, assim $\alpha \approx 0.19$[\si{\neper/\meter}] e $\beta = \dfrac{100\sqrt{6}}{3}\pi$[\si{\radian/\meter}]. Substituindo os valores temos: $$\vec{P}_{m}^{t} \approx 0.0011 e^{-0.38 z} \hat{a}_{z} [\si{\watt/\meter^{2}}]$$
+Para o cálculo do vetor de \emph{Poynting} médio temporal, nos é necessário calcular os campos elétricos e magnéticos transmitdos ao bloco de concreto através da interface.  O campo elétrico incidende é dado, sem perda de generalidade, por $\vec{E}_{i}$ $=$ $\cos(\pi \times 10^{10} t - \dfrac{100}{3}\pi z)$ $\hat{a}_{x}$ [\si{\volt/\meter}], com $\omega$ $=$ $\pi \times 10^{10}$ [\si{\radian/\second}], $\lambda_{1} = \dfrac{\omega}{c} = \dfrac{\pi \times 10^{10}}{3 \times 10^{8}}$ $=$ $\dfrac{100}{3}\pi$ [\si{\radian/\meter}]. A seguir representamos o  campo elétrico, magnético e o vetor de \emph{Poynting} transmitido em função de $\vec{E}_{i}$ dado por: $$\vec{E}_{t}  =  T |E|_{i} e^{\gamma_{2} z} \hat{a}_{x}$$ $$\vec{H}_{t}  =  T \dfrac{|E|_{i}}{Z_{2}} e^{\gamma_{2} z} \hat{a}_{y}$$ $$\vec{P}_{m}^{t} = \dfrac{1}{2}\mathfrak{Re}(\vec{E}_{t} \times \vec{H}_{t}) \hat{a}_{z}$$ $$\vec{P}_{m}^{t} = \mathfrak{Re}\left[\dfrac{1}{Z_{2}}\right] \dfrac{|T E_{i}|^2}{2}e^{-2\alpha_{2} z} \hat{a}_{z}$$ com $T = \Gamma + 1$ e $\Gamma$ $=$ $-0,42$ logo $T = 0,58$, $\gamma = \alpha + \jmath \beta$  onde: $$\alpha = \omega \sqrt{\mu\epsilon \sec{\theta}} \sin{\dfrac{\theta}{2}}$$ $$\beta = \omega \sqrt{\mu\epsilon \sec{\theta}} \cos{\dfrac{\theta}{2}}$$ com $\theta = \tan^{-1}\left(\dfrac{\sigma}{\omega\epsilon}\right)$, como $\dfrac{\sigma}{\omega\epsilon} = \dfrac{25}{\pi \times 10^{14} \times \dfrac{6 \times 10^{-9}}{36\pi}}$ $=$ $0,0015$, logo $\theta \approx 0.085$\si{\degree}, assim $\alpha_{2} \approx 0.19$[\si{\neper/\meter}] e $\beta = \dfrac{100\sqrt{6}}{3}\pi$[\si{\radian/\meter}]. Substituindo os valores temos: $$\vec{P}_{m}^{t} \approx 1092,10 \si{\micro} \, e^{-0.38 z} \hat{a}_{z}[\si{\watt/\meter^{2}}]$$
+
+Para o cálculo da porcentagem da potência média refletida e transmitida em relação a potência média incidente no bloco de concreto, devemos calcular o vetor de \emph{Poynting} médio incidente $$\vec{P}_{m}^{i} = \mathfrak{Re}\left[\dfrac{1}{Z_{1}}\right] \dfrac{|E_{i}|^2}{2}e^{-2\alpha_{1} z} \hat{a}_{z}$$ com $|E_i| = 1$[\si{\volt/\meter}], $Z_{1} = 120\pi$[\si{\ohm}] e $\alpha_{1}$ $=$ $0$[\si{\neper/\meter}], temos: $P_{m}^{i} \approx 1326,29$\si{\micro} $\hat{a}_{z}$ [\si{\watt/\meter$^2$}]. A potência média refletida, calculando em função do campo elétrico incidente, é dado por $$\vec{P}_{m}^{r} = \mathfrak{Re}\left[\dfrac{1}{Z_{1}}\right] \dfrac{|\Gamma E_{i}|^2}{2}e^{-2\alpha_{1} z} \hat{a}_{z}$$ com $|\Gamma| = 0,42$, temos $\vec{P}_{m}^{r} \approx 234,18$\si{\micro} $\hat{a}_{z}$ [\si{\watt/\meter$^2$}].
+
+Calculamos a porcentagem da potência refletida como P$_{pr}$ $=$ $\dfrac{\vec{P}_{m}^{r}}{\vec{P}_{m}^{i}} \times 100$ $=$ $\dfrac{234,18 \si{\micro}}{1326,29 \si{\micro}} \times 100$ $\approx$ $17,66$\%.
+
+Para a porcentagem da potência transmitida, temos P$_{pt}$ $=$ $\dfrac{\vec{P}_{m}^{t}}{\vec{P}_{m}^{i}} \times 100$ $=$ $\dfrac{1092,10 \si{\micro}}{1326,29 \si{\micro}} \times 100$ $\approx$ $82,34$\%
 \end{enumerate}
  
 %%% Local Variables: 
