--- a/LaTeX/TeleCom/TI0058/AP1/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP1/report.tex
@@ -1,6 +1,6 @@
 \begin{enumerate}[1.]
 
-\item Os campos elétricos de duas ondas eletromagnéticas de polarização linear, propagando em unísono através do espaço livre são dados por $E_{1} = e^{-\jmath \pi (z - 0,25)} \hat{a}_{x} [\si{\volt/\meter}]$ e $E_{2} = ae^{-\jmath \pi (z - 0,25b)} \hat{a}_{y} [\si{\volt/\meter}]$ com z em metros e onde a e b são constantes. Determine para a onda eletromagnética resultante: o campo magnético instantâneo, a polarização da onda, o vetor de Poynting instantâneo e médio.  
+\item Os campos elétricos de duas ondas eletromagnéticas de polarização linear, propagando em uníssono através do espaço livre são dados por $E_{1} = e^{-\jmath \pi (z - 0,25)} \hat{a}_{x} [\si{\volt/\meter}]$ e $E_{2} = ae^{-\jmath \pi (z - 0,25b)} \hat{a}_{y} [\si{\volt/\meter}]$ com z em metros e onde a e b são constantes. Determine para a onda eletromagnética resultante: o campo magnético instantâneo, a polarização da onda, o vetor de Poynting instantâneo e médio.  
 
 \item Uma onda eletromagnética plana uniforme harmônica no tempo na frequência \emph{f} propaga na direção $z > 0$ através de um tecido biológico de parâmetros desconhecidos. O campo magnético da onda tem somente a componente $x$ e sua intensidade \emph{rms} na origem do sistema de coordenadas é $H_{0}$ $=$ $25$\si{\milli}[\si{\ampere/\meter}]. A amplitude da onda é reduzida em $3,25$ \si{\decibel} para cada centímetro percorrido, e o coeficiente de fase da onda chega a $\beta$ $=$ $260$[\si{\radian/\meter}]. Determinar a permissividade e a condutividade do tecido.
 
@@ -13,7 +13,7 @@
 {\setlength\itemindent{25pt} \item As porcentagens da potência incidente média no tempo que são refletidas a partir da interface e transmitidas no bloco de concreto}
 \end{enumerate}
 
-\item Uma onda eletromagnética plana na frequência \emph{f} incide normalmente em um sistema de $3$ meios caracterizados por $\epsilon^{1}_{r}$,  $\epsilon^{2}_{r}$ e $\epsilon^{3}_{r}$, figura $2.40$ da apostila. Projete a camada central (meio $2$) com a menor espessura, para que não haja reflexão de onda incidente de volta ao meio $1$. Gere o gráfico da potência refletida no meio $1$ para a frequência $0,5$ \emph{f} a $1,5$ \emph{f}. Mostre no gráfico a faixa em que a potência refletida é metade da incidente, isto é, a faixa de queda de $3$ \si{\decibel} (caso não encontre aumete a faixa de frequência).
+\item Uma onda eletromagnética plana na frequência \emph{f} incide normalmente em um sistema de $3$ meios caracterizados por $\epsilon^{1}_{r}$,  $\epsilon^{2}_{r}$ e $\epsilon^{3}_{r}$, figura $2.40$ da apostila. Projete a camada central (meio $2$) com a menor espessura, para que não haja reflexão de onda incidente de volta ao meio $1$. Gere o gráfico da potência refletida no meio $1$ para a frequência $0,5$ \emph{f} a $1,5$ \emph{f}. Mostre no gráfico a faixa em que a potência refletida é metade da incidente, isto é, a faixa de queda de $3$ \si{\decibel} (caso não encontre aumente a faixa de frequência).
 
 \item Uma onda plana na frequência \emph{f} propaga no ar e incide num ângulo de $\theta_{i}$ sobre o mar ($\epsilon = 80 \epsilon_{0}$, $\sigma = 3$[\si{\siemens/\meter}]), calcular:
 
@@ -73,11 +73,13 @@ Para o cálculo da potência média fazemos uso da notação fasorial, tal que $
   & = & \dfrac{1}{24\pi} \hat{a}_{z}[\si{\watt/\meter^{2}}] \nonumber
 \end{eqnarray*}
 
+\newpage
+
 \item Dados: $f = 1,6$ \si{\giga\hertz}
 
 \newpage
 
-\item Dados: $f = 5$ \si{\giga\hertz}, meio1 caracterizado por $\epsilon_{0}$, $\mu_{0}$ e $\sigma = 0$ e o meio2 por $6 \epsilon_{0}$, $\mu_{0}$, $\sigma = 2,5 \times 10^{-3}$ [\si{\siemens/\meter}]
+\item Dados: $f = 5$ \si{\giga\hertz}, meio1 caracterizado por $\epsilon_{0}$, $\mu_{0}$ e $\sigma = 0$ e o meio2 por $6 \epsilon_{0}$, $\mu_{0}$, $\sigma = \dfrac{2,5}{10^{3}}$ [\si{\siemens/\meter}]
 
 Para classificar o bloco de concreto, usamos o seguinte critério:
 \begin{itemize}
@@ -93,9 +95,9 @@ para o bloco de concreto temos:
   \dfrac{\sigma}{\omega \epsilon} & \approx & 0,0015 \nonumber
 \end{eqnarray*}
 
-como $0.0015$ $<$ $0.01$, logo o bloco de concreto, para as condições previamente dadas, é um dielétrico.
+como $0.0015$ $<$ $0.01$, logo o bloco de concreto, para as condições previamente dadas, é um bom dielétrico.
 
-Para o cálculo da taxa de onda estacionária no ar seguimos a seguinte relação: TOE $=$ $\dfrac{|E|_{M}}{|E|_{m}}$ $=$$\dfrac{|E|^{+}_{0} + |E|^{-}_{0}}{|E|^{+}_{0} - |E|^{-}_{0}}$, com o coeficiente de reflexão definido como $|\Gamma|$ $=$ $\left|\dfrac{E^{-}_{0}}{E^{+}_{0}}\right|$, substituindo temos: TOE $=$ $\dfrac{1 + |\Gamma|}{1 - |\Gamma|}$. Em termos das impedâncias dos meios separados pela interface temos que o $\Gamma$ $=$ $\dfrac{Z_{2} - Z_{1}}{Z_{2} + Z_{1}}$, como $Z = \sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0} - \jmath \left(\frac{\sigma}{\omega}\right)}}$  para um meio não condutor $\left(\dfrac{\sigma}{\omega}\right) \rightarrow 0$, assim $Z = \sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0}}}$ $=$ $120\pi \sqrt{\dfrac{\mu_{r}}{\epsilon_{r}}}$.  Como o meio 1 é o ar, logo $Z_{1} = \sqrt{\dfrac{\mu_{0}}{\epsilon_{0}}} =120\pi$ [\si{\ohm}] e $Z_{2} = \dfrac{120\pi}{\sqrt{6}}$ [\si{\ohm}], assim:
+Para o cálculo da taxa de onda estacionária no ar seguimos a seguinte relação: TOE $=$ $\dfrac{|E|_{M}}{|E|_{m}}$ $=$$\dfrac{|E|^{+}_{0} + |E|^{-}_{0}}{|E|^{+}_{0} - |E|^{-}_{0}}$, com o coeficiente de reflexão definido como $|\Gamma|$ $=$ $\left|\dfrac{E^{-}_{0}}{E^{+}_{0}}\right|$, substituindo temos: TOE $=$ $\dfrac{1 + |\Gamma|}{1 - |\Gamma|}$. Em termos das impedâncias dos meios separados pela interface temos que o $\Gamma$ $=$ $\dfrac{Z_{2} - Z_{1}}{Z_{2} + Z_{1}}$, como $Z = \sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0} - \jmath \left(\frac{\sigma}{\omega}\right)}}$  para um bom dielétrico podemos aproximar Z por $\sqrt{\dfrac{\mu_{r}\mu_{0}}{\epsilon_{r}\epsilon_{0}}}$ $=$ $120\pi \sqrt{\dfrac{\mu_{r}}{\epsilon_{r}}}$.  Como o meio 1 é o ar, logo $Z_{1} = \sqrt{\dfrac{\mu_{0}}{\epsilon_{0}}} =120\pi$ [\si{\ohm}] e $Z_{2} = \dfrac{120\pi}{\sqrt{6}}$ [\si{\ohm}], assim:
 
 \begin{eqnarray*}
   \Gamma & = & \dfrac{\dfrac{120\pi}{\sqrt{6}} - 120\pi}{\dfrac{120\pi}{\sqrt{6}} + 120\pi} \nonumber \\
@@ -111,16 +113,36 @@ Substituindo, temos:
   TOE & \approx & 2,44
 \end{eqnarray*}
 
-Para o cálculo do vetor de \emph{Poynting} médio temporal, nos é necessário calcular os campos elétricos e magnéticos transmitdos ao bloco de concreto através da interface.  O campo elétrico incidende é dado, sem perda de generalidade, por $\vec{E}_{i}$ $=$ $\cos(\pi \times 10^{10} t - \dfrac{100}{3}\pi z)$ $\hat{a}_{x}$ [\si{\volt/\meter}], com $\omega$ $=$ $\pi \times 10^{10}$ [\si{\radian/\second}], $\lambda_{1} = \dfrac{\omega}{c} = \dfrac{\pi \times 10^{10}}{3 \times 10^{8}}$ $=$ $\dfrac{100}{3}\pi$ [\si{\radian/\meter}]. A seguir representamos o  campo elétrico, magnético e o vetor de \emph{Poynting} transmitido em função de $\vec{E}_{i}$ dado por: $$\vec{E}_{t}  =  T |E|_{i} e^{\gamma_{2} z} \hat{a}_{x}$$ $$\vec{H}_{t}  =  T \dfrac{|E|_{i}}{Z_{2}} e^{\gamma_{2} z} \hat{a}_{y}$$ $$\vec{P}_{m}^{t} = \dfrac{1}{2}\mathfrak{Re}(\vec{E}_{t} \times \vec{H}_{t}) \hat{a}_{z}$$ $$\vec{P}_{m}^{t} = \mathfrak{Re}\left[\dfrac{1}{Z_{2}}\right] \dfrac{|T E_{i}|^2}{2}e^{-2\alpha_{2} z} \hat{a}_{z}$$ com $T = \Gamma + 1$ e $\Gamma$ $=$ $-0,42$ logo $T = 0,58$, $\gamma = \alpha + \jmath \beta$  onde: $$\alpha = \omega \sqrt{\mu\epsilon \sec{\theta}} \sin{\dfrac{\theta}{2}}$$ $$\beta = \omega \sqrt{\mu\epsilon \sec{\theta}} \cos{\dfrac{\theta}{2}}$$ com $\theta = \tan^{-1}\left(\dfrac{\sigma}{\omega\epsilon}\right)$, como $\dfrac{\sigma}{\omega\epsilon} = \dfrac{25}{\pi \times 10^{14} \times \dfrac{6 \times 10^{-9}}{36\pi}}$ $=$ $0,0015$, logo $\theta \approx 0.085$\si{\degree}, assim $\alpha_{2} \approx 0.19$[\si{\neper/\meter}] e $\beta = \dfrac{100\sqrt{6}}{3}\pi$[\si{\radian/\meter}]. Substituindo os valores temos: $$\vec{P}_{m}^{t} \approx 1092,10 \si{\micro} \, e^{-0.38 z} \hat{a}_{z}[\si{\watt/\meter^{2}}]$$
+Para o cálculo do vetor de \emph{Poynting} médio temporal, nos é necessário calcular os campos elétricos e magnéticos transmitidos ao bloco de concreto através da interface.  O campo elétrico incidente é dado, sem perda de generalidade, por $\vec{E}_{i}$ $=$ $\cos(\pi \times 10^{10} t - \dfrac{100}{3}\pi z)$ $\hat{a}_{x}$ [\si{\volt/\meter}], com $\omega$ $=$ $\pi \times 10^{10}$ [\si{\radian/\second}], $\lambda_{1} = \dfrac{\omega}{c} = \dfrac{\pi \times 10^{10}}{3 \times 10^{8}}$ $=$ $\dfrac{100}{3}\pi$ [\si{\radian/\meter}]. A seguir representamos o  campo elétrico, magnético e o vetor de \emph{Poynting} transmitido em função de $\vec{E}_{i}$ dado por: $$\vec{E}_{t}  =  T |E|_{i} e^{\gamma_{2} z} \hat{a}_{x}$$ $$\vec{H}_{t}  =  T \dfrac{|E|_{i}}{Z_{2}} e^{\gamma_{2} z} \hat{a}_{y}$$ $$\vec{P}_{m}^{t} = \dfrac{1}{2}\mathfrak{Re}(\vec{E}_{t} \times \vec{H}_{t}) \hat{a}_{z}$$ $$\vec{P}_{m}^{t} = \mathfrak{Re}\left[\dfrac{1}{Z_{2}}\right] \dfrac{|T E_{i}|^2}{2}e^{-2\alpha_{2} z} \hat{a}_{z}$$ com $T = \Gamma + 1$ e $\Gamma$ $=$ $-0,42$ logo $T = 0,58$, $\gamma = \alpha + \jmath \beta$  onde: $$\alpha = \omega \sqrt{\mu\epsilon \sec{\theta}} \sin{\dfrac{\theta}{2}}$$ $$\beta = \omega \sqrt{\mu\epsilon \sec{\theta}} \cos{\dfrac{\theta}{2}}$$ com $\theta = \tan^{-1}\left(\dfrac{\sigma}{\omega\epsilon}\right)$, como $\dfrac{\sigma}{\omega\epsilon} = \dfrac{25}{\pi \times 10^{14} \times \dfrac{6 \times 10^{-9}}{36\pi}}$ $=$ $0,0015$, logo $\theta \approx 0.085$\si{\degree}, assim $\alpha_{2} \approx 0.19$[\si{\neper/\meter}] e $\beta = \dfrac{100\sqrt{6}}{3}\pi$[\si{\radian/\meter}]. Substituindo os valores temos: $$\vec{P}_{m}^{t} \approx 1092,10 \si{\micro} \, e^{-0.38 z} \hat{a}_{z}[\si{\watt/\meter^{2}}]$$
 
 Para o cálculo da porcentagem da potência média refletida e transmitida em relação a potência média incidente no bloco de concreto, devemos calcular o vetor de \emph{Poynting} médio incidente $$\vec{P}_{m}^{i} = \mathfrak{Re}\left[\dfrac{1}{Z_{1}}\right] \dfrac{|E_{i}|^2}{2}e^{-2\alpha_{1} z} \hat{a}_{z}$$ com $|E_i| = 1$[\si{\volt/\meter}], $Z_{1} = 120\pi$[\si{\ohm}] e $\alpha_{1}$ $=$ $0$[\si{\neper/\meter}], temos: $P_{m}^{i} \approx 1326,29$\si{\micro} $\hat{a}_{z}$ [\si{\watt/\meter$^2$}]. A potência média refletida, calculando em função do campo elétrico incidente, é dado por $$\vec{P}_{m}^{r} = \mathfrak{Re}\left[\dfrac{1}{Z_{1}}\right] \dfrac{|\Gamma E_{i}|^2}{2}e^{-2\alpha_{1} z} \hat{a}_{z}$$ com $|\Gamma| = 0,42$, temos $\vec{P}_{m}^{r} \approx 234,18$\si{\micro} $\hat{a}_{z}$ [\si{\watt/\meter$^2$}].
 
 Calculamos a porcentagem da potência refletida como P$_{pr}$ $=$ $\dfrac{\vec{P}_{m}^{r}}{\vec{P}_{m}^{i}} \times 100$ $=$ $\dfrac{234,18 \si{\micro}}{1326,29 \si{\micro}} \times 100$ $\approx$ $17,66$\%.
 
 Para a porcentagem da potência transmitida, temos P$_{pt}$ $=$ $\dfrac{\vec{P}_{m}^{t}}{\vec{P}_{m}^{i}} \times 100$ $=$ $\dfrac{1092,10 \si{\micro}}{1326,29 \si{\micro}} \times 100$ $\approx$ $82,34$\%
+
+\newpage
+
+\item 
+
+\item Dados f $=$ $2 \times 10^{5}$[\si{\hertz}] e $\theta_{i}$ $=$ $30$\si{\degree}, com $|\vec{E}_{i}|$ $=$ $500\si{\micro}$[\si{\volt/\meter}] com polarização paralela. A onda plana através do ar ($\epsilon_{r} = 1$, $\mu_{r} = 1$, $\sigma = 0$) com Z$_{1} = 120\pi$[\si{\ohm}], incide sobre o mar ($\epsilon_{r} = 80$, $\mu_{r} = 1$, $\sigma = 3$[\si{\siemens/\meter}]). Calculando $\dfrac{\sigma}{\omega\epsilon}$ $=$ $\dfrac{3}{4\pi \times 10^{5} \times \dfrac{10^{-9}}{36\pi}}$ $=$ $27 \times 10^{4}$, logo o mar é um bom condutor, assim podemos aproximar Z$_{2}$ por $\sqrt{\dfrac{\omega\mu}{\sigma}}(1 + \jmath)$ $=$ $\sqrt{\dfrac{4\pi \times 10^{5} \times 4\pi \times 10^{-7}}{3}}(1 + \jmath)$ $=$ $\sqrt{\dfrac{8\pi^{2}}{75}}e^{\jmath\frac{\pi}{4}}$[\si{\ohm}]
+
+Para determinarmos o módulo dos campos elétricos e magnéticos refletidos e transmitidos devemos calcular os coeficientes de reflexão $\Gamma$ e transmissão $T$ que dependem da impedância dos meios e dos ângulos de incidência e transmissão. Dada a incidência oblíqua do campo elétrico na interface temos que $\gamma_{1}\sin(\theta_i) = \gamma_{1}\sin(\theta_{r}) = \gamma_{2}\sin(\theta_{t})$. Onde $\theta_{t}$ $=$ $\sin^{-1}\left[\dfrac{\gamma_{1}}{\gamma_{2}}\sin(\theta_{i})\right]$. Com $\gamma_{1} = \dfrac{\omega}{c} = \dfrac{4\pi \times 10^{5}}{3 \times 10^{8}}$ $\Rightarrow$ $\gamma_{1} = \dfrac{\pi}{750}$[\si{\radian/\meter}], $\gamma_{2}$ $=$ $\sqrt{\dfrac{\omega\mu\sigma}{2}}(1 + j)$ dado que em um bom condutor a atenuação [\si{\neper/\meter}], parte real, é igual a constante de fase [\si{\radian/\meter}], parte imaginária, assim $\gamma_{2}$ $=$ $\dfrac{\pi\sqrt{12}}{5}e^{\jmath\frac{\pi}{4}}$. Logo $\theta_{t} = \sin^{-1}\left(\dfrac{\gamma_{1}}{\mathfrak{Re}[\gamma_{2}]}\sin(\theta_{i})\right)$ $\Rightarrow$ $\theta_{t} \approx 0,077$\si{\degree}. Segue que $\Gamma = \dfrac{\mathfrak{Re}[Z_{2}]\cos(\theta_{t}) - Z_{1}\cos(\theta_{i})}{\mathfrak{Re}[Z_{2}]\cos(\theta_{t}) + Z_{1}\cos(\theta_{i})}$, com $\Gamma = \dfrac{\sqrt{\dfrac{16\pi^{2}}{300}}\cos(0,077) - 120\pi\cos(30)}{\sqrt{\dfrac{16\pi^{2}}{300}}\cos(0,077) + 120\pi\cos(30)}$ $\Rightarrow$ $\Gamma \approx -0,99556$. O coeficiente de transmissão T é dado por $\dfrac{2\mathfrak{Re}[Z_{2}]\cos(\theta_{i})}{\mathfrak{Re}[Z_{2}]\cos(\theta_{t}) + Z_{1}\cos(\theta_{i})} \approx 0,00384$.
+
+O módulo dos campos elétricos e magnéticos refletidos e transmitidos em função do campo elétrico incidente são dados por:
+
+\begin{eqnarray*}
+E^{r}_{||} & = & |\Gamma| E^{i}_{||} = (5 \times 0,99556) \times 10^{-4} = 497,78\si{\micro}[\si{\volt/\meter}] \nonumber \\
+H^{r}_{||} & = & \dfrac{|\Gamma| E^{i}_{||}}{Z_{1}} = \dfrac{(5 \times 0,99556) \times 10^{-4}}{120\pi} = 1,3204\si{\micro}[\si{\ampere/\meter}]\nonumber \\
+E^{t}_{||} & = & T E^{i}_{||} = (5 \times 384) \times 10^{-9} = 1920\si{\nano}[\si{\volt/\meter}]\nonumber \\
+H^{t}_{||} & = & \dfrac{T E^{i}_{||}}{\mathfrak{Re}[Z_{2}]} = \dfrac{(5 \times 384) \times 10^{-9}}{\sqrt{\dfrac{16\pi^{2}}{300}}} = 2646,37\si{\nano}[\si{\volt/\meter}]\nonumber
+\end{eqnarray*}
+
 \end{enumerate}
  
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "../main"
 %%% End: 
+
+%  LocalWords:  ae Poynting rms pt fasorial Re pr
